# SimpleECS

./: CMakeLists.txt  README.md  demo.cpp
examples/: CMakeLists.txt  README.md  particle.cpp
include/ECS/: ArchetypeManager.h  Entity.h  EntityManager.h  System.h
src/: Archetype.h  ArchetypeManager.h  ArchetypeStorage.h  Chunk.h  ComponentStorageManager.h  ComponentType.h  ComponentTypeManager.h  ECS.h  Entity.h  EntityManager.h  System.h
test/: CMakeLists.txt  tests.cpp
